--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -8,3 +8,19 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+.game {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.game__score {
+    width: 100%;
+    margin: 0;
+    text-align: right;
+    padding-right: 10px;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
