--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,4 +1,7 @@
-@import './canvas.css';
+@font-face{
+    font-family: 'pixel-font';
+    src: url('/assets/fonts/uni0553-webfont.ttf');
+}
 
 body {
     display: flex;
@@ -14,6 +17,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .game__score {
@@ -21,6 +25,37 @@ body {
     margin: 0;
     text-align: right;
     padding-right: 10px;
-    border: 1px solid black;
+    border-width: 1px 1px 0 1px;
+    border-color: black;
+    border-style: solid;
     box-sizing: border-box;
+    font-family: 'pixel-font';
+    background-color:  rgb(150, 196, 137);
+    padding-bottom: 5px;
+}
+
+.game__restart{
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    top: 70px;
+}
+
+.game__restart img{
+    width: 50px;
+}
+
+.game__restart:hover{
+    top: 65px;
+}
+
+.game__restart:hover img{
+    width: 60px;
+}
+
+canvas {
+    border-width: 0 1px 1px 1px;
+    border-color: black;
+    border-style: solid;
+    background-color: rgb(207, 243, 198);
 }
