--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: 'pixel-font';
-    src: url('/assets/fonts/uni0553-webfont.ttf');
+    src: url('../assets/fonts/uni0553-webfont.ttf');
 }
 
 body {
