--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -1,3 +1,6 @@
+@import './game.css';
+@import './controls.css';
+
 @font-face{
     font-family: 'pixel-font';
     src: url('../assets/fonts/uni0553-webfont.ttf');
@@ -5,57 +8,12 @@
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
     margin: 0;
+    background-color: #3D4053;
 }
 
-.game {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-}
-
-.game__score {
-    width: 100%;
-    margin: 0;
-    text-align: right;
-    padding-right: 10px;
-    border-width: 1px 1px 0 1px;
-    border-color: black;
-    border-style: solid;
-    box-sizing: border-box;
-    font-family: 'pixel-font';
-    background-color:  rgb(150, 196, 137);
-    padding-bottom: 5px;
-}
-
-.game__restart{
-    display: none;
-    cursor: pointer;
-    position: absolute;
-    top: 70px;
-}
-
-.game__restart img{
-    width: 50px;
-}
-
-.game__restart:hover{
-    top: 65px;
-}
-
-.game__restart:hover img{
-    width: 60px;
-}
-
-canvas {
-    border-width: 0 1px 1px 1px;
-    border-color: black;
-    border-style: solid;
-    background-color: rgb(207, 243, 198);
-}
